results/scraper/box64/388
Build error
Hardware Snapdragon 8xx
clang 14.
/home/box64/src/elfs/elfloader.c:992:38: error: use of undeclared identifier 'STB_GNU_UNIQUE'                                               if(!to_add || (bind==STB_GNU_UNIQUE && FindGlobalSymbol(maplib, symname, -1, NULL)))                                                             ^                        /home/box64/src/elfs/elfloader.c:1029:34: error: use of undeclared identifier 'STB_GNU_UNIQUE'                                          if(!to_add || (bind==STB_GNU_UNIQUE && 
FindGlobalSymbol(maplib, symname, version, vername)))        
                                             ^
FindGlobalSymbol(maplib, symname, version, vername))) Also not work

SOFTWARE:ANDROID NDK r25